song switcher www: enhance noscript and fix loading flickering

--- a/song_switcher_www/src/style.sass
+++ b/song_switcher_www/src/style.sass
@@ -85,14 +85,11 @@ div
     background-color: #7ca5d7
     color: black
 
-#timeline, noscript
+#timeline
   $height: 100px
   height: $height
   line-height: $height
   width: 100%
-
-body:not(.js) #timeline
-  display: none
 
 #footer
   align-items: flex-end
@@ -107,7 +104,7 @@ body:not(.js) #timeline
   padding: 0
   text-align: right
 
-noscript, .invalid
+.invalid
   background-color: red
 
 .hidden
